--- a/src/main/resources/publico/css/miEstilo.css
+++ b/src/main/resources/publico/css/miEstilo.css
@@ -201,3 +201,12 @@ body{
     border-top-right-radius: 5px;
     border-bottom-right-radius: 5px;
 }
+#chat{
+    border-radius: 100%;
+    float: right;
+}
+
+.bootstrap{
+    z-index: 1;
+    display: none;
+}
