--- a/src/main/resources/publico/css/miEstilo.css
+++ b/src/main/resources/publico/css/miEstilo.css
@@ -122,7 +122,7 @@ a:hover { text-decoration: none }
     cursor: pointer;
 }
 body{
-    background: url("/publico/images/background.jpg");
+    background: url("/images/background.jpg");
 }
 #header{
     text-align: center;
@@ -209,4 +209,12 @@ body{
 
 .pagesNumber:hover{
     cursor: pointer;
+}
+
+.v-divider{
+    margin-left:5px;
+    margin-right:5px;
+    width:1px;
+    height:100%;
+    border-left:1px solid gray;
 }
